--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   dio: ^1.0.9
+  flutter_refresh: ^0.0.2
 
 dev_dependencies:
   flutter_test:
