--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   dio: ^1.0.9
   flutter_refresh: ^0.0.2
+  flutter_html_textview: "^0.2.6"
 
 dev_dependencies:
   flutter_test:
